--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
     </div>
 
     <div class="product">
-        <img src="https://via.placeholder.com/300x400" alt="Koszula">
-        <h2>Elegancka Koszula</h2>
-        <p>Cena: 79,99 PLN</p>
+        <img src="https://i.imgur.com/COnrBPs.png" alt="Koszulka Man Utd">
+        <h2>Koszulka Man Utd</h2>
+        <p>Cena: 99,99 PLN</p>
     </div>
 
     <div class="product">
         <img src="https://via.placeholder.com/300x400" alt="Spodnie">
         <h2>Stylowe Spodnie</h2>
         <p>Cena: 149,99 PLN</p>
-    </div> <!-- Poprawiono zamknięcie tego div'a -->
+    </div> 
 </div>
 
 <footer>
