--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     </div>
 
     <div class="product">
-        <img src="https://via.placeholder.com/300x400" alt="Spodnie">
+        <img src="https://i.imgur.com/MjB2qKn.png" alt=" Stylowe Spodnie">
         <h2>Stylowe Spodnie</h2>
-        <p>Cena: 149,99 PLN</p>
+        <p>Cena: 99,99 PLN</p>
     </div> 
 </div>
 
