--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         nav a:hover {
             color: #000000; 
-        } /* <-- Dodano zamknięcie nawiasu klamrowego */
+        } 
 
         .container {
             padding: 20px;
@@ -53,9 +53,9 @@
 
         .product {
             background-color: #ffffff; 
-            margin: 20px; /* Zmniejszono margines */
+            margin: 20px; 
             border-radius: 10px;
-            width: 300px; /* Zmiana szerokości na bardziej przyjazną */
+            width: 300px; 
             text-align: center;
             color: #000000; 
         }
@@ -68,7 +68,7 @@
         .product h2 {
             font-size: 1.5em;
             margin: 15px 0;
-            color: #00ff00; 
+            color: #000000; 
         }
 
         .product p {
