--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
     <a href="#mezczyzni">Dla Mężczyzn</a>
     <a href="#kontakt">Kontakt</a>
 </nav>
+    <section id="kontakt" class="contact-section">
+    <h2>Skontaktuj się z nami</h2>
+    <p>Nazwa na Vinted : antek587910</p>
 
 <div class="container">
     <div class="product">
