--- a/index.html
+++ b/index.html
@@ -117,9 +117,13 @@
     <a href="#kontakt">Kontakt</a>
 </nav>
     <section id="kontakt" class="contact-section">
-    <h2>Skontaktuj się z nami</h2>
+    <h2>Skontaktuj się ze mną </h2>
     <p>Nazwa na Vinted : antek587910</p>
 
+          <div class="contact-info">
+        <p>Email: <a href="e-mail to: antekpolanski5@gmail.com">antekpolanski5@gmail.com</a></p>
+        <p>Telefon: <a href="tel:+48533085126">+48 533 085 126</a></p>  
+              
 <div class="container">
     <div class="product">
         <img src="https://i.imgur.com/1kLhNYb.png" alt="Koszulka Arsenal">
