--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <a href="#nowosci">Nowości</a>
     <a href="#pilkarzyki">Dla Piłkarzyków</a>
     <a href="#mezczyzni">Dla Mężczyzn</a>
-    <a href="#kontakt">Kontakt</a>
+    <a href="#kontakt.html">Kontakt</a>
 </nav>
     
       
