--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <p>Opis produktów dla mężczyzn.</p>
 </div>
 
-<div id="kontakt" class="container">
+<div id="kontakt.html" class="container">
     <h2>Dane Kontaktowe</h2>
     <p>Email: kontakt@vonk.fashion</p>
     <p>Telefon: +48 123 456 789</p>
